# om3-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
om3utils/: MOM6InputParser.py  __init__.py  esmf_profiling.py  esmf_trace.py  fms_profiling.py  mom6_input.py  nuopc_config.py  payu_config_yaml.py  profiling.py  profiling_analyses.py  utils.py
tests/: conftest.py  test_MOM6InputParser.py  test_esmf_profiling.py  test_esmf_trace.py  test_fms_profiling.py  test_mom6_input.py  test_nuopc_config.py  test_payu_config_yaml.py  test_profiling.py  test_scaling.py  test_utils.py
